# codepad

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  codepad.sln  doxyfile
buffer_test/: buffer_test.vcxproj  main.cpp
cmake/: copy_skia_headers.cmake
cmake/modules/: FindFontconfig.cmake  FindGLib.cmake  FindGTK3.cmake  FindPango.cmake
codepad/: api_export.h  apigen_definitions.h  codepad.vcxproj  codepad.vcxproj.filters  keys.json  main.cpp  skin.json
codepad/config/: arrangements.json  keys.json  settings.json  skin.json
codepad/core/: bst.h  encodings.h  event.h  globals.cpp  hotkey_registry.h  json.h  logger_sinks.h  logging.h  math.h  misc.h  plugin_interface.h  plugins.h  profiling.h  setting_entries.cpp  settings.h  tasks.h
codepad/editor/: codebox.h  components.h  docking.h  editor_code.h
codepad/editors/: buffer.cpp  buffer.h  buffer_manager.h  caret_set.h  docking.cpp  docking.h  editor.h  generic_settings.cpp  interaction_modes.h  tabs.cpp  tabs.h
codepad/img_src/: circle_2px.xcf  round_corner_2px.xcf
codepad/os/: current.h  dynamic_library.h  filesystem.h  font.h  freetype_font_base.h  input.h  linux.h  misc.h  opengl_renderer_base.cpp  opengl_renderer_base.h  renderer.h  software_renderer_base.cpp  software_renderer_base.h  window.cpp  window.h  windows.cpp  windows.h
codepad/platform/: current.h  input.h  interface.h  renderer.h  window.h  windows.cpp  windows.h
codepad/skin/: arrangements.json  skin.json
codepad/ui/: animation.h  animation_path.cpp  animation_path.h  arrangements.cpp  arrangements.h  atlas.h  cairo_renderer_base.h  commands.h  common_elements.cpp  common_elements.h  commonelements.h  config_parsers.h  draw.h  element.cpp  element.h  element_classes.cpp  element_classes.h  element_parameters.h  font.cpp  font.h  font_family.h  hotkey_registry.h  manager.cpp  manager.h  misc.h  native_commands.cpp  native_commands.h  panel.cpp  panel.h  renderer.h  scheduler.h  text_rendering.cpp  text_rendering.h  textrenderer.h  theme_providers.h  visual.cpp  visual.h  window.cpp  window.h  window_hotkey_manager.h
codepad/utilities/: bst.h  encodings.h  event.h  font.h  globals.cpp  globals.h  globalvars.cpp  hash_set.h  hotkey_registry.h  misc.h  performance_monitor.h  performance_view.h  tasks.h  textconfig.h  textproc.h
config/: arrangements.json  keys.json  settings.json
doc/: architecture.md  build.md  coding_guidelines.md  contributing.md  todo.md
include/codepad/: apigen_definitions.h
plugins/command_pack/: CMakeLists.txt
plugins/command_pack/src/: main.cpp
plugins/editors/: CMakeLists.txt
plugins/editors/include/codepad/editors/: buffer.h  buffer_manager.h  caret_rendering.h  caret_set.h  decoration.h  editor.h  interaction_modes.h  json_parsers.inl  manager.h  overlapping_range_registry.h  theme_manager.h
plugins/editors/include/codepad/editors/binary/: caret_set.h  components.h  contents_region.h
plugins/editors/include/codepad/editors/code/: caret_gatherer.h  caret_set.h  contents_region.h  decoration.h  decoration_gatherer.h  fragment_generation.h  interpretation.h  line_number_display.h  linebreak_registry.h  minimap.h  search_panel.h  theme.h  view.h  view_caching.h  whitespace_gatherer.h
plugins/editors/src/: buffer.cpp  commands.cpp  decoration.cpp  details.h  editor.cpp  main.cpp  theme_manager.cpp
plugins/editors/src/binary/: components.cpp  contents_region.cpp
plugins/editors/src/code/: caret_gatherer.cpp  caret_set.cpp  contents_region.cpp  decoration.cpp  fragment_generation.cpp  interpretation.cpp  line_number_display.cpp  minimap.cpp  search_panel.cpp  theme.cpp
plugins/editors/test/: CMakeLists.txt
plugins/editors/test/fuzz/buffer/: CMakeLists.txt  main.cpp
plugins/editors/test/fuzz/caret/: CMakeLists.txt  main.cpp
plugins/editors/test/fuzz/overlapping_range/: CMakeLists.txt  main.cpp
plugins/editors/test/unit/: CMakeLists.txt
plugins/editors/test/unit/src/: caret_set.cpp  theme.cpp  theme_configuration.cpp
plugins/lsp/: CMakeLists.txt
plugins/lsp/include/codepad/lsp/: backend.h  client.h  interpretation_tag.h  manager.h  uri.h
plugins/lsp/include/codepad/lsp/backends/: stdio.h
plugins/lsp/include/codepad/lsp/messages/: general.h
plugins/lsp/include/codepad/lsp/types/: client.h  common.h  diagnostics.h  general.h  language_features.h  serialization.h  text_synchronization.h  window.h  workspace.h
plugins/lsp/src/: client.cpp  interpretation_tag.cpp  main.cpp  manager.cpp  uri.cpp
plugins/lsp/src/types/: client.cpp  common.cpp  diagnostics.cpp  general.cpp  language_features.cpp  private.h  text_synchronization.cpp  window.cpp  workspace.cpp
plugins/python_plugin_host_pybind11/: CMakeLists.txt
plugins/python_plugin_host_pybind11/src/: core.cpp  main.cpp  modules.cpp  shared.h  ui.cpp
plugins/tree_sitter/: CMakeLists.txt
plugins/tree_sitter/include/codepad/tree_sitter/: highlight_collector.h  highlight_iterator.h  highlight_layer_iterator.h  interpretation_interface.h  interpretation_tag.h  language_configuration.h  manager.h  query.h  wrappers.h
plugins/tree_sitter/src/: details.h  highlight_collector.cpp  highlight_iterator.cpp  highlight_iterator.h  highlight_layer_iterator.cpp  highlight_layer_iterator.h  interpretation_interface.cpp  interpretation_interface.h  interpretation_tag.cpp  language_configuration.cpp  language_configuration.h  main.cpp  manager.cpp  query.cpp  query.h  wrappers.h
src/: api_export.h  main.cpp
src/core/: assert.h  encodings.h  event.h  globals.cpp  logger_sinks.cpp  logger_sinks.h  logging.cpp  logging.h  misc.cpp  misc.h  plugin_interface.h  plugins.cpp  plugins.h  profiling.cpp  profiling.h  setting_entries.cpp  settings.cpp  settings.h  text.cpp
src/editors/: buffer.cpp  buffer.h  caret_rendering.h  caret_set.h  editor.cpp  editor.h  (+1 more)
src/os/: linux.h  (+3 more)
test/: CMakeLists.txt
test/regex/: CMakeLists.txt
test/regex/src/: main.cpp
test/regex/src/test_suites/: pcre2.cpp
test/unit/: CMakeLists.txt
test/unit/src/: direct2d_renderer.cpp  text.cpp
tools/: CMakeLists.txt
(+310 files in other folders)
